syntax = "proto3";

package user;

service UserService {
  rpc CreateUser (CreateUserRequest) returns (UserResponse);
  rpc UpdateUser (UpdateUserRequest) returns (UserResponse);
  rpc DeleteUser (DeleteUserRequest) returns (DeleteUserResponse);
  rpc GetUsers (Empty) returns (GetUsersResponse);
}

option go_package = "./pkg/note_v1/pb;pb";

message User {
  int32 id = 1;
  string name = 2;
  string email = 3;
}

message CreateUserRequest {
  string name = 1;
  string email = 2;
}

message UpdateUserRequest {
  int32 id = 1;
  string name = 2;
  string email = 3;
}

message DeleteUserRequest {
  int32 id = 1;
}

message UserResponse {
  User user = 1;
}

message DeleteUserResponse {
  bool success = 1;
}

message GetUsersResponse {
  repeated User users = 1;
}

message Empty {}
